@@ -5,7 +5,7 @@
 // based on the Program) you indicate your acceptance of this statement,
 // and all its terms.
 //
-// $Id: G4VUserPhysicsList.hh,v 1.3 1999-04-14 10:45:56 kurasige Exp $
+// $Id: G4VUserPhysicsList.hh,v 1.4 1999-04-16 09:32:05 kurasige Exp $
 // GEANT4 tag $Name: not supported by cvs2svn $
 //
 // 
@@ -20,9 +20,9 @@
 //           Construct particles
 //        G4VUserPhysicsList::constructPhysics() 
 //           Construct procesess and register them to particles
-//        G4VUserPhysicsList::SetCuts(G4double aValue)
-//           set a cut value in range to all particles
-//           (and rebuilding physics table will be invoked)
+//        G4VUserPhysicsList::SetCuts()
+//           set cut values in range to all particles
+//           (and rebuilding physics table will be invoked )
 // 
 //	History
 //        first version                   09 Jan. 1998 by H.Kurashige 
@@ -39,6 +39,8 @@
 //          add    ConstructAllParticles()
 //        modified                        14, Apr 1999 by H.Kurashige
 //          change BuildPhysicsTable as public
+//          removed ConstructAllParticles() and related methods  
+//          changed SetCuts method argument
 // ------------------------------------------------------------
 #ifndef G4VUserPhysicsList_h
 #define G4VUserPhysicsList_h 1
@@ -61,7 +63,8 @@ class G4VUserPhysicsList
     // particles and processes are created    
     void Construct();
  
-   protected:
+
+  protected:
     // These two methods of  ConstructParticle() and ConstructProcess()
     // will be invoked in the Construct() method. 
 
@@ -78,24 +81,16 @@ class G4VUserPhysicsList
    //  !! Caution: this class must not be overriden !!
     void AddTransportation();
 
-   // Construct All particles 
-    virtual void ConstructAllParticles();
-    // these methods Construct all particles in each category
-    virtual void ConstructAllBosons();
-    virtual void ConstructAllLeptons();
-    virtual void ConstructAllMesons();
-    virtual void ConstructAllBarions();
-    virtual void ConstructAllIons();
-    virtual void ConstructAllShortLiveds();
-
+  /////////////////////////////////////
   public:  
    //  "SetCuts" method sets a cut value for all particle types 
    //   in the particle table
-    virtual void SetCuts(G4double aCut) = 0;
+   virtual void SetCuts() = 0; 
 
+  protected:
    //  "SetCutsWithDefault" method sets a cut value with the default
    //   cut values for all particle types in the particle table
-    void SetCutsWithDefault();   
+   void SetCutsWithDefault();   
 
   public:
     // 
@@ -147,6 +142,7 @@ class G4VUserPhysicsList
     // this is the default cut value for all particles
     G4double defaultCutValue;
 
+  /////////////////////////////////////
   public:
     // Print out the List of registered particles types
     void DumpList() const;
@@ -194,10 +190,6 @@ class G4VUserPhysicsList
 
 };
 
-inline void G4VUserPhysicsList::SetCutsWithDefault()
-{
-  SetCuts(defaultCutValue);
-}  
 
 inline void G4VUserPhysicsList::Construct()
 {
