@@ -1,4 +1,4 @@
-$Id: History,v 1.4 1999-04-14 10:45:53 kurasige Exp $
+$Id: History,v 1.5 1999-04-16 09:32:00 kurasige Exp $
 -------------------------------------------------------------------
 
      =========================================================
@@ -16,6 +16,10 @@ committal in the CVS repository !
      ----------------------------------------------------------
      * Reverse chronological order (last date on top), please *
      ----------------------------------------------------------
+Apr 16,  99 H.Kurashige (tag run-01-00-03)
+-  Remove G4VUserPhysicsList::ConstructAllParticles and related
+-  Change argument of SetCuts method
+
 Apr 14, 99 H.Kurashige (tag run-01-00-02)
 - "buildPhysicsTable" command is added in G4UserPhysicsListMessenger
 
